@@ -59,4 +59,7 @@
 	- bugfix: spinner not always attached
 0.0.31
 	- renamed built css file (now tnt.board.css)
-	- api: move_right / move_left renamed scroll
+	- api: "move_right" / "move_left" renamed "scroll"
+	- api: "reorder" removed, "tracks" now reorders and create tracks
+
+
